# glfw_shader

./: README.md
basic/: CMakeLists.txt  display.cpp  display.h  input.h  main.cpp  render.cpp  render.h  shader.cpp  shader.h
basic/shaders/: quad_fs.glsl  quad_vs.glsl
fbo/: CMakeLists.txt  main.cpp  render.cpp  render.h
fbo/shaders/: quad_fs.glsl  scene_fs.glsl  scene_vs.glsl
